started about page

--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,11 +18,13 @@
 	</script>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 	<link rel="stylesheet" href="assets/css/style.css" />
-    <title>WOEContact</title>
+	<title>WOEAbout</title>
 </head>
+
 <body>
-<header>
-<body class="rounded">
+	<header>
+   
+
     <div class="header rounded">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="index.html"><img src="../assets/images/WOE_Overlay.png" class="rounded" alt="logo"></a>
@@ -56,8 +61,16 @@
   </div>
 </nav>
     
-    </div>
-</header>
-    
+    </div> 
+
+	</header>
+	<section>
+
+	</section>
+	<footer></footer>
+
+
+
 </body>
+
 </html>
