added products and styling

--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
       crossorigin="anonymous"
     />
     <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
     ></script>
     <script
@@ -21,62 +21,28 @@
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Roboto:wght@500&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>WOEAbout</title>
   </head>
 
   <body>
     <header>
-      <div class="header">
-        <nav class="navbar navbar-expand-lg navbar-custom bg-light">
-          <a class="navbar-brand" href="index.html"
-            ><img src="../assets/images/WOE_Overlay.png" alt="logo"
-          /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html"
-                  >Home <span class="sr-only">(current)</span></a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="products.html">Products</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>
+  <div class="header">
+  <a href="index.html" class="logo"> <img src="../assets/images/WOE_Overlay.png" ></a>
+  <div class="header-right">
+    <a  href="index.html">Home</a>
+    <a href="contact.html">Contact</a>
+    <a class="active" href="about.html">About</a>
+    <a href="products.html">Products</a>
+  </div>
+</div>
     </header>
+
     <section>
     <div class="intro">
       <div class="container-fluid">
@@ -103,7 +69,7 @@
             <p>
               Every single customer is important to us, we want you to be
               satisfied so you will come back again and hopefully tell your
-              friends about us.
+              friends about us.We have no strangers on here we have friends old & new.Drop us a line, we love to hear from you.
             </p>
           </div>
           </div>
