--- a/index.html
+++ b/index.html
@@ -26,48 +26,21 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>WOEIndex</title>
   </head>
   <body>
     <header>
-      <div class="header">
-        <nav class="navbar navbar-expand-lg navbar-custom bg-light">
-          <a class="navbar-brand" href="index.html"
-            ><img src="../assets/images/WOE_Overlay.png" alt="logo"
-          /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html"
-                  >Home <span class="sr-only">(current)</span></a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="products.html">Products</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>
+  <div class="header">
+  <a href="index.html" class="logo"> <img src="../assets/images/WOE_Overlay.png" ></a>
+  <div class="header-right">
+    <a class="active" href="index.html">Home</a>
+    <a href="contact.html">Contact</a>
+    <a href="about.html">About</a>
+    <a href="products.html">Products</a>
+  </div>
+</div>
     </header>
       <section>    
       <div class="carousel-container">
@@ -233,4 +206,14 @@
     </section>
     <footer></footer>
   </body>
+ <script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
 </html>
