--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
       </div>
 
         <div class="row">
-          <div class="col-md-6 overflow-auto">
+          <div class="col-md-6 overfloe-hidden">
  <div class="jumbotron">
  <div class="intro">
             <p class="display-5">
@@ -74,7 +74,7 @@
           </div>
           </div>
           </div>
-          <div class="col-md-6 overflow-auto">
+          <div class="col-md-6 overflow-hidden">
           <div class="jumbotron">
  <div class="intro">
             <p class="display-5">
